@@ -15,7 +15,7 @@
      path="login"
      name="login"
      view=".login.login"
-     renderer="templates/login.pt"
+     view_renderer="templates/login.pt"
      />
 
   <route
@@ -34,28 +34,28 @@
      path=":pagename"
      name="view_page"
      view=".views.view_page"
-     renderer="templates/view.pt"
+     view_renderer="templates/view.pt"
      />
 
   <route
      path="add_page/:pagename"
      name="add_page"
      view=".views.add_page"
-     renderer="templates/edit.pt"
-     permission="edit"
+     view_renderer="templates/edit.pt"
+     view_permission="edit"
      />
 
   <route
      path=":pagename/edit_page"
      name="edit_page"
      view=".views.edit_page"
-     renderer="templates/edit.pt"
-     permission="edit"
+     view_renderer="templates/edit.pt"
+     view_permission="edit"
      />
 
   <forbidden
      view=".login.login"
-     renderer="templates/login.pt"/>
+     view_renderer="templates/login.pt"/>
 
   <authtktauthenticationpolicy
     secret="sosecret"
