@@ -21,21 +21,21 @@
      path=":pagename"
      name="view_page"
      view=".views.view_page"
-     renderer="templates/view.pt"
+     view_renderer="templates/view.pt"
      />
 
   <route
      path="add_page/:pagename"
      name="add_page"
      view=".views.add_page"
-     renderer="templates/edit.pt"
+     view_renderer="templates/edit.pt"
      />
 
   <route
      path=":pagename/edit_page"
      name="edit_page"
      view=".views.edit_page"
-     renderer="templates/edit.pt"
+     view_renderer="templates/edit.pt"
      />
 
 </configure>
